src/styles/UserButton.css
#manage-profile {
  width: 200px;
}

#userbutton {
  display: flex;
  flex-direction: column;
  align-content: start;
}

#user-menu {
  width: 300px;
  height: 400px;
  background-color: var(--secondary-bg-color);
  border-radius: 0 0 0 20px;

  position: absolute;
  right: 12px;
  top: 12px;

  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 12px 24px 24px 24px;
}

#user-menu-header {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

#close-menu {
  align-self: flex-end;
  background: none;
  border: none;
  padding: 0;
  width: fit-content;
  font-size: 2rem;
}

#menu {
  padding: 12px 0;
  width: 100%;
}

#logout {
  width: 100%;
  margin-top: auto;
  justify-self: end;
}

